--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <p>i'm udzura (Uchio Kondo). i'm here.</p>
 <pre class='sh_ruby'>
 echo.hoge
-puts &quot;&lt;Nanoc3::Item:0x3fb87d7473fc identifier=/ binary?=false&gt;&quot;</pre>
+puts &quot;&lt;Nanoc3::Item:0x3fbfcb9286d0 identifier=/ binary?=false&gt;&quot;</pre>
 <pre class='sh_sh'>function tasu {
     echo $1 $2 + p | dc
     return $?
@@ -28,7 +28,7 @@ puts &quot;&lt;Nanoc3::Item:0x3fb87d7473fc identifier=/ binary?=false&gt;&quot;<
 
 ls -l
 cd ~/test</pre>
-<pre style='background-color: #222;color: #ffe;'>ruby -e "puts %q(&#x000A;    <span style="color: yellow !important; font-weight: bold !important;">udzura__atmark__udzura.jp</span>&#x000A;).sub(/__atmark__/, %q(@)).strip"&#x000A;</pre>
+<pre class='sh_sourceCode'>ruby -e "puts %q(&#x000A;    <span style="color: yellow !important; font-weight: bold !important;">udzura__atmark__udzura.jp</span>&#x000A;).sub(/__atmark__/, %q(@)).strip"&#x000A;</pre>
 <pre class='sh_ruby'>def hoge
   :hoge
 end
