--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="utf-8">
-    <title>udzura.jp - Home</title>
+    <title>udzura.jp - A New Item</title>
     <link rel="stylesheet" type="text/css" href="/css/style.css" media="screen">
     <link rel="stylesheet" type="text/css" href="/css/sh_style.css" media="screen">
     <link rel="stylesheet" type="text/css" href="/css/lightbox.css" media="screen">
@@ -21,56 +21,9 @@
   </head>
   <body onload="sh_highlightDocument();">
     <div id="main">
-      <h1>udzura.jp</h1>
-<h2>hi</h2>
-<p>i'm udzura (Uchio Kondo). i'm here.</p>
-<h3>akubi</h3>
-<div class='images'>
-  <a href="/images/150709359.jpg" rel="lightbox" title="あくびちゃん"><img src="/images/150709359.jpg" width='250' /></a>
-  <div>画像のサンプル＋リンクです</div>
-</div>
-<p>Akubi Kondo is my dog.</p>
-<pre class='sh_ruby'>
-echo.hoge
-puts &quot;&lt;Nanoc3::Item:0x3fd9e6b931d8 identifier=/ binary?=false&gt;&quot;
-puts &quot;[:default]&quot;
-puts &quot;[&quot;[]&quot;, &quot;[]=&quot;, &quot;attributes&quot;, &quot;attributes=&quot;, &quot;binary?&quot;, &quot;children&quot;, &quot;children=&quot;, &quot;compiled_content&quot;, &quot;content&quot;, &quot;identifier&quot;, &quot;identifier=&quot;, &quot;mtime&quot;, &quot;outdated?&quot;, &quot;outdated_due_to_dependencies&quot;, &quot;outdated_due_to_dependencies=&quot;, &quot;outdated_due_to_dependencies?&quot;, &quot;parent&quot;, &quot;parent=&quot;, &quot;path&quot;, &quot;raw_content&quot;, &quot;raw_filename&quot;, &quot;rep_named&quot;, &quot;reps&quot;, &quot;site&quot;, &quot;site=&quot;]&quot;
-puts &quot;{:file=&gt;#&lt;File:content/index.haml&gt;, :meta_filename=&gt;nil, :content_filename=&gt;&quot;content/index.haml&quot;, :title=&gt;&quot;Home&quot;, :filename=&gt;&quot;content/index.haml&quot;, :extension=&gt;&quot;haml&quot;}&quot;</pre>
-<pre class='sh_sh'>function tasu {
-    echo $1 $2 + p | dc
-    return $?
-}
-
-ls -l
-cd ~/test</pre>
-<pre class='sh_sourceCode'>ruby -e "puts %q(&#x000A;    <span style="color: yellow !important; font-weight: bold !important;">udzura__atmark__udzura.jp</span>&#x000A;).sub(/__atmark__/, %q(@)).strip"&#x000A;</pre>
-<pre class='sh_ruby'>def hoge
-  :hoge
-end
-
-class XXX
-  class &lt;&lt; self
-    def yyy
-      return 0
-    end
-  end
-end</pre>
-<div class='images'>
-  <img src="/images/150709359.jpg"  />
-  <div>画像のサンプルです</div>
-</div>
-<h3>about</h3>
+      <h1 id="page-not-found">page not found&hellip;</h1>
 <ul>
-  <li>test</li>
-</ul>
-<h3>sites</h3>
-<ul>
-  <li>hoge</li>
-  <li>fuga</li>
-</ul>
-<h3>webservices</h3>
-<ul>
-  <li>coming soon</li>
+  <li>Take care that you mistyped your url.</li>
 </ul>
 
     </div>
