--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>udzura.jp - Home</title>
     <link rel="stylesheet" type="text/css" href="/css/style.css" media="screen">
+    
     <link rel="stylesheet" type="text/css" href="/css/sh_style.css" media="screen">
     <link rel="stylesheet" type="text/css" href="/css/lightbox.css" media="screen">
     <link rel="shortcut icon" href="/favicon.ico" type="image/vnd.microsoft.icon" />
@@ -32,7 +33,7 @@
 <p>Akubi Kondo is my dog.</p>
 <pre class='sh_ruby'>
 echo.hoge
-puts &quot;&lt;Nanoc3::Item:0x3fd9e6b931d8 identifier=/ binary?=false&gt;&quot;
+puts &quot;&lt;Nanoc3::Item:0x3febac772e00 identifier=/ binary?=false&gt;&quot;
 puts &quot;[:default]&quot;
 puts &quot;[&quot;[]&quot;, &quot;[]=&quot;, &quot;attributes&quot;, &quot;attributes=&quot;, &quot;binary?&quot;, &quot;children&quot;, &quot;children=&quot;, &quot;compiled_content&quot;, &quot;content&quot;, &quot;identifier&quot;, &quot;identifier=&quot;, &quot;mtime&quot;, &quot;outdated?&quot;, &quot;outdated_due_to_dependencies&quot;, &quot;outdated_due_to_dependencies=&quot;, &quot;outdated_due_to_dependencies?&quot;, &quot;parent&quot;, &quot;parent=&quot;, &quot;path&quot;, &quot;raw_content&quot;, &quot;raw_filename&quot;, &quot;rep_named&quot;, &quot;reps&quot;, &quot;site&quot;, &quot;site=&quot;]&quot;
 puts &quot;{:file=&gt;#&lt;File:content/index.haml&gt;, :meta_filename=&gt;nil, :content_filename=&gt;&quot;content/index.haml&quot;, :title=&gt;&quot;Home&quot;, :filename=&gt;&quot;content/index.haml&quot;, :extension=&gt;&quot;haml&quot;}&quot;</pre>
