--- a/404.html
+++ b/404.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <title>udzura.jp - A New Item</title>
     <link rel="stylesheet" type="text/css" href="/css/style.css" media="screen">
+    
+    <link rel="stylesheet" type="text/css" href="/css/style-404.css" media="screen">
+    
     <link rel="stylesheet" type="text/css" href="/css/sh_style.css" media="screen">
     <link rel="stylesheet" type="text/css" href="/css/lightbox.css" media="screen">
     <link rel="shortcut icon" href="/favicon.ico" type="image/vnd.microsoft.icon" />
