--- a/projects/LT/index.html
+++ b/projects/LT/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="utf-8">
-    <title>udzura.jp - page not found</title>
+    <title>udzura.jp - Slides & Talks i have had</title>
     <link rel="stylesheet" type="text/css" href="/css/style.css" media="screen">
     <link rel="stylesheet" type="text/css" href="/css/sh_style.css" media="screen">
     <link rel="stylesheet" type="text/css" href="/css/lightbox.css" media="screen">
@@ -20,20 +20,14 @@
   </head>
   <body onload="sh_highlightDocument();">
     <div id="main">
-      <style type="text/css">
-body {
-    color: #666;
-}
-#main h1 {
-    color: red;
-    border-color: red;
-}
-</style>
+      <h1 id="slides--talks-i-have-had">Slides &amp; Talks i have had</h1>
 
-      <h1 id="page-not-found">page not found&hellip;</h1>
+<h2 id="comming-soon">Comming soon…</h2>
+
 <ul>
-  <li>Take care that you mistyped your url.</li>
+  <li>really?</li>
 </ul>
+
     </div>
     <div id="sidebar">
       <h2><a href="/">Top</a></h2>
