--- a/projects/Padrino-Document-JP/index.html
+++ b/projects/Padrino-Document-JP/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="utf-8">
-    <title>udzura.jp - page not found</title>
+    <title>udzura.jp - Padrino Document in Japanese</title>
     <link rel="stylesheet" type="text/css" href="/css/style.css" media="screen">
     <link rel="stylesheet" type="text/css" href="/css/sh_style.css" media="screen">
     <link rel="stylesheet" type="text/css" href="/css/lightbox.css" media="screen">
@@ -20,20 +20,29 @@
   </head>
   <body onload="sh_highlightDocument();">
     <div id="main">
-      <style type="text/css">
-body {
-    color: #666;
-}
-#main h1 {
-    color: red;
-    border-color: red;
-}
-</style>
-
-      <h1 id="page-not-found">page not found&hellip;</h1>
+      <h1>Padrino Document in Japanese</h1>
+<div class='images'>
+  <a href="/images/padrinojp.png" rel="lightbox" title="Padrino Documett JP"><img src="/images/padrinojp.png" width='440' /></a>
+  <div>Padrino Document JP...</div>
+</div>
+<p>日本語化をしています。</p>
+<h2>Details</h2>
 <ul>
-  <li>Take care that you mistyped your url.</li>
+  <li>
+    <a href='http://jp.padrinorb.com/'>Padrino で素敵なウェブ開発を (jp.padrinorb.com)</a>
+  </li>
+  <li>
+    I'm maintaining this web site! If you want to help, see
+    <a href='http://jp.padrinorb.com/pages/contribute'>Contribute</a>
+    .
+  </li>
+  <li>
+    管理人です！ 協力したい方は
+    <a href='http://jp.padrinorb.com/pages/contribute'>Contribute</a>
+    などを見てね。
+  </li>
 </ul>
+
     </div>
     <div id="sidebar">
       <h2><a href="/">Top</a></h2>
