--- a/projects/others/index.html
+++ b/projects/others/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="utf-8">
-    <title>udzura.jp - page not found</title>
+    <title>udzura.jp - Other pj i'm involved</title>
     <link rel="stylesheet" type="text/css" href="/css/style.css" media="screen">
     <link rel="stylesheet" type="text/css" href="/css/sh_style.css" media="screen">
     <link rel="stylesheet" type="text/css" href="/css/lightbox.css" media="screen">
@@ -20,20 +20,20 @@
   </head>
   <body onload="sh_highlightDocument();">
     <div id="main">
-      <style type="text/css">
-body {
-    color: #666;
-}
-#main h1 {
-    color: red;
-    border-color: red;
-}
-</style>
+      <h1 id="other-pj-im-involved">Other pj i’m involved</h1>
 
-      <h1 id="page-not-found">page not found&hellip;</h1>
 <ul>
-  <li>Take care that you mistyped your url.</li>
+  <li>他にやってること</li>
 </ul>
+
+<h2 id="facebookircgateway">FacebookIRCGateway</h2>
+
+<ul>
+  <li><a href="https://github.com/shunirr/FacebookIrcGateway">Github Repo</a></li>
+  <li>I’v given a few commits for this pj. i’m planning i’ll be more active…</li>
+  <li>いくつか小さなコミットをしています、もっと活発にやりたいんですがなかなか…</li>
+</ul>
+
     </div>
     <div id="sidebar">
       <h2><a href="/">Top</a></h2>
