--- a/about/udzura/index.html
+++ b/about/udzura/index.html
@@ -31,6 +31,14 @@
 
 </div>
 
+<p>Below is me eating a “551” brand pork bun.</p>
+
+<div class="images">
+  <a href="/images/uchio.jpg" rel="lightbox" title="this is uchio."><img src="/images/uchio.jpg" /></a>
+  <div>This is me.</div>
+
+</div>
+
 <h3 id="skills">skills</h3>
 <ul>
   <li>Ruby Language (Jan, 2009 - )</li>
@@ -103,7 +111,7 @@
       <h2>About</h2>
       <ul>
       
-        <li><a href="/about/udzura/" title="2011-07-15 16:30 updated">
+        <li><a href="/about/udzura/" title="2011-07-15 17:11 updated">
           @udzura (Uchio Kondo)</a></li>
       
         <li><a href="/about/udzura.jp/" title="2011-07-15 16:24 updated">
