--- a/projects/My-Rubygems/index.html
+++ b/projects/My-Rubygems/index.html
@@ -29,7 +29,7 @@
 <h2 id="rack-session-dbm">rack-session-dbm</h2>
 
 <ul>
-  <li><a href="https://rubygems.org/gems/rack-session-dbm">Rubygems.oreg page</a></li>
+  <li><a href="https://rubygems.org/gems/rack-session-dbm">Rubygems.org page</a></li>
   <li>Store your rack app’s session into file-based session db. It’s useful for small project. Watch your datasize using sdbm.</li>
   <li>Rackアプリケーションのセッションを、ファイルベースのGDBM/SDBMなどに保管できます。SDBMは、データサイズに制限があります。</li>
 </ul>
@@ -45,7 +45,7 @@
 <h2 id="pebbles-rack-hanoi">pebbles-rack-hanoi</h2>
 
 <ul>
-  <li><a href="https://rubygems.org/gems/pebbles-rack-hanoi">Rubygems.orgn page</a></li>
+  <li><a href="https://rubygems.org/gems/pebbles-rack-hanoi">Rubygems.org page</a></li>
   <li><code>Rack::Hanoi</code> helps you to solve Hanoi’s Tower question using your browser.</li>
   <li>「ハノイの塔」問題を解きます。ブラウザで……。</li>
 </ul>
