--- a/projects/Essays/index.html
+++ b/projects/Essays/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="utf-8">
-    <title>udzura.jp - Slides & Talks i have had</title>
+    <title>udzura.jp - Essays</title>
     <link rel="stylesheet" type="text/css" href="/css/style.css" media="screen">
     <link rel="stylesheet" type="text/css" href="/css/sh_style.css" media="screen">
     <link rel="stylesheet" type="text/css" href="/css/lightbox.css" media="screen">
@@ -20,35 +20,48 @@
   </head>
   <body onload="sh_highlightDocument();">
     <div id="main">
-      <h1>Slides & Talks i have had</h1>
-<p>
-  Now, some of slides are
-  <a href='http://www.scribd.com/udzura1984'>available Here</a>
-</p>
-<h2>Testing around Sinatra - TokyuRubyKaigi04 @ Shinsen, tokyo</h2>
-<p>Testing Sinatra with drunken people</p>
-<a title="View Testing in Sinatra on Scribd" href="http://www.scribd.com/doc/73311432/Testing-in-Sinatra" style="margin: 12px auto 6px auto; font-family: Helvetica,Arial,Sans-serif; font-style: normal; font-variant: normal; font-weight: normal; font-size: 14px; line-height: normal; font-size-adjust: none; font-stretch: normal; -x-system-font: none; display: block; text-decoration: underline;">Testing in Sinatra</a> <iframe class="scribd_iframe_embed" src="http://www.scribd.com/embeds/73311432/content?start_page=1&view_mode=slideshow&access_key=key-yvubfx8sf1hbpl5o3vl" data-auto-height="true" data-aspect-ratio="1.33333333333333" scrolling="no" id="doc_73939" width="100%" height="600" frameborder="0"></iframe><script type="text/javascript">(function() { var scribd = document.createElement("script"); scribd.type = "text/javascript"; scribd.async = true; scribd.src = "http://www.scribd.com/javascripts/embed_code/inject.js"; var s = document.getElementsByTagName("script")[0]; s.parentNode.insertBefore(scribd, s); })();</script>
-<h2>Start Padrino @ Hongo, tokyo</h2>
-<p>Intoroduction to Padrino framework, and the "buffet" style web development</p>
-<a title="View Start Padrino on Scribd" href="http://www.scribd.com/doc/73312640/Start-Padrino" style="margin: 12px auto 6px auto; font-family: Helvetica,Arial,Sans-serif; font-style: normal; font-variant: normal; font-weight: normal; font-size: 14px; line-height: normal; font-size-adjust: none; font-stretch: normal; -x-system-font: none; display: block; text-decoration: underline;">Start Padrino</a> <iframe class="scribd_iframe_embed" src="http://www.scribd.com/embeds/73312640/content?start_page=1&view_mode=list&access_key=key-1aws73v5ady3b5pep1tj" data-auto-height="true" data-aspect-ratio="1.5" scrolling="no" id="doc_98581" width="100%" height="600" frameborder="0"></iframe><script type="text/javascript">(function() { var scribd = document.createElement("script"); scribd.type = "text/javascript"; scribd.async = true; scribd.src = "http://www.scribd.com/javascripts/embed_code/inject.js"; var s = document.getElementsByTagName("script")[0]; s.parentNode.insertBefore(scribd, s); })();</script>
-<h2>At "LL Planets" korakuen Aug 2011</h2>
+      <h1 id="essays-all-in-japanese">Essays (All in Japanese)</h1>
+
+<h2 id="racksinatrapadrinohttpjprubyistnetmagazine0036-sinatrareintroduction"><a href="http://jp.rubyist.net/magazine/?0036-SinatraReintroduction">Rack/Sinatra/Padrino</a></h2>
+
 <ul>
-  <li>sorry it's available only in Japanese...</li>
-  <li>
-    related blog post:
-    <a href='http://blog.udzura.jp/2011/08/23/ll-planets-private-report/'>in blog.udzura.jp</a>
+  <li>@ Rubyist Magazine</li>
+  <li>A essay wrote to free web magazine &ldquo;Rubyist Magazine&rdquo;. About Sinatra, Padrino, and Rack frameworks.</li>
+</ul>
+
+<h2 id="all-about-web-tech--section-4-databasehttpgihyojpmagazinewdpressarchive2012vol68"><a href="http://gihyo.jp/magazine/wdpress/archive/2012/vol68">&ldquo;All About Web Tech / Section 4: Database&rdquo;</a></h2>
+
+<ul>
+  <li>@gihyo&rsquo;s Web+DB Press - at vol.68</li>
+  <li>Some RDBMS &amp; NoSQL Essay. </li>
+</ul>
+
+<h2 id="beating-the-average-rubyistshttpgihyojpmagazinewdpressarchive2012vol69"><a href="http://gihyo.jp/magazine/wdpress/archive/2012/vol69">&ldquo;Beating the Average Rubyists&rdquo;</a></h2>
+
+<ul>
+  <li>@gihyo&rsquo;s Web+DB Press - since vol.69</li>
+  <li>Serial essays about Ruby. Themes are:
+    <ul>
+      <li>Padrino</li>
+      <li>ActiveSupport</li>
+      <li>and more&hellip;</li>
+    </ul>
   </li>
 </ul>
-<h2>At "RubyKaigi of the darkness" nerima 2011</h2>
+
+<h2 id="acknowledgements-reviewers">Acknowledgements (Reviewers)</h2>
+
 <ul>
-  <li>Sinatra/Padrino intro for Rails-darksided people</li>
-  <li>
-    related blog post:
-    <a href='http://blog.udzura.jp/2011/07/19/i-went-to-rubykaigi2011-and-talked-on-sinatra-padrino/'>in blog.udzura.jp</a>
+  <li><code>They.sort_by { rand }</code>
+    <ul>
+      <li>Tatsuya SASAKI</li>
+      <li>Daisuke FUJIMURA</li>
+      <li>Takeshi YABE</li>
+      <li>Satoshi NAMAI</li>
+    </ul>
   </li>
+  <li>super thanks!</li>
 </ul>
-<h2>more coming...</h2>
-<p>really?</p>
 
     </div>
     <div id="sidebar">
