--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
   <body onload="sh_highlightDocument();">
     <div id="main">
       <h1>udzura.jp</h1>
+
 <h2>hi</h2>
 <p>i'm udzura (Uchio Kondo). i'm here.</p>
+<p><strong>My profile is moved to <a href='http://udzura.boo.jp/'>udzura.boo.jp</a>. Thank you.</strong></p>
 <h2>contact</h2>
 <pre class='sh_sourceCode'>ruby -e "puts %q(&#x000A;    <span style="color: yellow !important; font-weight: bold !important;">udzura__atmark__udzura.jp</span>&#x000A;).sub(/__atmark__/, %q(@)).strip"&#x000A;</pre>
 <h2>about</h2>
